--- a/core/templates/core/project_profit_dashboard.html
+++ b/core/templates/core/project_profit_dashboard.html
@@ -1,6 +1,7 @@
 {% extends "core/base.html" %}
 {% load i18n %}
 {% load static %}
+{% load core_extras %}
 
 {% block title %}Dashboard de Profit - {{ project.name }}{% endblock %}
 
