--- a/core/templates/core/dashboard_admin.html
+++ b/core/templates/core/dashboard_admin.html
@@ -63,6 +63,10 @@
         </p>
       </div>
       <div class="col-md-3 text-end mt-2 mt-md-0">
+        <a href="{% url 'user_wizard_list' %}" class="btn btn-primary me-2">
+          <i class="bi bi-people-fill me-2"></i>
+          {% trans "Manage Users" %}
+        </a>
         <a href="/admin/" class="btn btn-outline-primary">
           <i class="bi bi-box-arrow-up-right me-2"></i>
           <span class="d-none d-md-inline">{% trans "Django Admin" %}</span>
